rust/macros/tests/invalid/target/debug/deps/double_commas-ca88555073c3155f.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/double_commas-ca88555073c3155f.d: double_commas.rs Cargo.toml

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libdouble_commas-ca88555073c3155f.rmeta: double_commas.rs Cargo.toml

double_commas.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
